[gd_scene load_steps=34 format=2]

[ext_resource path="res://Assets/Obstacles/Luxo ball/sprite_00.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Obstacle.gd" type="Script" id=2]
[ext_resource path="res://Assets/Obstacles/Luxo ball/sprite_03.png" type="Texture" id=3]
[ext_resource path="res://Assets/Obstacles/Luxo ball/sprite_05.png" type="Texture" id=4]
[ext_resource path="res://Assets/Obstacles/Luxo ball/sprite_08.png" type="Texture" id=5]
[ext_resource path="res://Assets/Obstacles/Luxo ball/sprite_06.png" type="Texture" id=6]
[ext_resource path="res://Assets/Obstacles/Luxo ball/sprite_09.png" type="Texture" id=7]
[ext_resource path="res://Assets/Obstacles/Luxo ball/sprite_10.png" type="Texture" id=8]
[ext_resource path="res://Assets/Obstacles/Luxo ball/sprite_14.png" type="Texture" id=9]
[ext_resource path="res://Assets/Obstacles/Luxo ball/sprite_11.png" type="Texture" id=10]
[ext_resource path="res://Assets/Obstacles/Luxo ball/sprite_15.png" type="Texture" id=11]
[ext_resource path="res://Assets/Obstacles/Luxo ball/sprite_16.png" type="Texture" id=12]
[ext_resource path="res://Assets/Obstacles/Luxo ball/sprite_21.png" type="Texture" id=13]
[ext_resource path="res://Assets/Obstacles/Luxo ball/sprite_01.png" type="Texture" id=14]
[ext_resource path="res://Assets/Obstacles/Luxo ball/sprite_13.png" type="Texture" id=15]
[ext_resource path="res://Assets/Obstacles/Luxo ball/sprite_19.png" type="Texture" id=16]
[ext_resource path="res://Assets/Obstacles/Luxo ball/sprite_20.png" type="Texture" id=17]
[ext_resource path="res://Assets/Obstacles/Luxo ball/sprite_17.png" type="Texture" id=18]
[ext_resource path="res://Assets/Obstacles/Luxo ball/sprite_22.png" type="Texture" id=19]
[ext_resource path="res://Assets/Obstacles/Luxo ball/sprite_07.png" type="Texture" id=20]
[ext_resource path="res://Assets/Obstacles/Luxo ball/sprite_18.png" type="Texture" id=21]
[ext_resource path="res://Assets/Obstacles/Luxo ball/sprite_12.png" type="Texture" id=22]
[ext_resource path="res://Assets/Obstacles/Luxo ball/sprite_02.png" type="Texture" id=23]
[ext_resource path="res://Assets/Obstacles/Luxo ball/sprite_04.png" type="Texture" id=24]
[ext_resource path="res://Assets/Obstacles/Wall-e/sprite_5.png" type="Texture" id=25]
[ext_resource path="res://Assets/Obstacles/Wall-e/sprite_0.png" type="Texture" id=26]
[ext_resource path="res://Assets/Obstacles/Wall-e/sprite_3.png" type="Texture" id=27]
[ext_resource path="res://Assets/Obstacles/Wall-e/sprite_4.png" type="Texture" id=28]
[ext_resource path="res://Assets/Obstacles/Wall-e/sprite_1.png" type="Texture" id=29]
[ext_resource path="res://Assets/Obstacles/Wall-e/sprite_2.png" type="Texture" id=30]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 14 ), ExtResource( 23 ), ExtResource( 3 ), ExtResource( 24 ), ExtResource( 4 ), ExtResource( 6 ), ExtResource( 20 ), ExtResource( 5 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 10 ), ExtResource( 22 ), ExtResource( 15 ), ExtResource( 9 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 18 ), ExtResource( 21 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 13 ), ExtResource( 19 ) ],
"loop": true,
"name": "luxo ball rolling",
"speed": 10.0
}, {
"frames": [ ExtResource( 26 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 25 ) ],
"loop": true,
"name": "wall-e walking",
"speed": 8.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 112, 120 )

[sub_resource type="CircleShape2D" id=3]
radius = 40.0

[node name="Obstacle" type="Area2D" groups=[
"Obstacles",
]]
position = Vector2( 2744, 576 )
collision_layer = 4
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -16, 8 )
scale = Vector2( 0.8, 0.8 )
frames = SubResource( 1 )
animation = "wall-e walking"

[node name="WallECollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -8, 0 )
shape = SubResource( 2 )
disabled = true

[node name="BallCollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -7.99988, 88 )
shape = SubResource( 3 )
disabled = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -5.49997, 75.5 )
scale = Vector2( 6.65, 6.85 )

[connection signal="body_entered" from="." to="." method="_on_Obstacle_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
